Fixes overflow in mobile screen

--- a/src/stylus/_globals.styl
+++ b/src/stylus/_globals.styl
@@ -113,7 +113,7 @@ button
   max-width $max-width-mobile
   margin 0 auto
   padding $padding
-  width 100%
+  // width 100%
   @media(min-width: 1240px)
     max-width 1100px
   // @media(min-width: 1920px)
